--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -626,7 +626,7 @@
                     <div class="form-label">
                         <label *ngIf="!ornament.controls.ornamentImage.value"
                             class="my-auto m-auto pt-2 mandatory ">Upload
-                            Ornaments
+                            Ornament with Weight
                             Image</label>
                         <label *ngIf="ornament.controls.ornamentImage.value && !disable"
                             class="my-auto text-danger m-auto kt-pointer"
