--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -251,10 +251,11 @@
                         <!-- Form Array -->
 
                         <div class="row">
-                            <div class="col-3 form-label">
+                            <div
+                                class="col-3 form-label p-0 kt-padding-t-15 d-flex justify-content-start align-item-start">
                                 <label class="kt-padding-l-10 mandatory">
-                                    Rate of Interest <br>
-                                    (% / Monthly)
+                                    <span class="mandatory">Payment Frequency </span><br><br>
+                                    Interest Rate%(p.m.)
                                 </label>
                             </div>
                             <div class="col">
