--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
@@ -59,8 +59,8 @@
                 <ng-container matColumnDef="currentLocation">
                     <mat-header-cell *matHeaderCellDef>Current Location</mat-header-cell>
                     <mat-cell *matCellDef="let packet">
-                        <span *ngIf="packet.customerLoan">
-                            {{packet.customerLoan.loanUniqueId}}
+                        <span *ngIf="packet.customerPacketTracking">
+                            {{packet.customerPacketTracking[0].packetLocation.location |titlecase}}
                         </span>
                     </mat-cell>
                 </ng-container>
