--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
@@ -32,14 +32,19 @@
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
                 <ng-container matColumnDef="location">
                     <mat-header-cell *matHeaderCellDef>Location</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.location | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let role">
+                        <span *ngFor="let sender of role.senderData">
+                            {{sender.location | titlecase}}
+                        </span>
+
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="updatedBy">
                     <mat-header-cell *matHeaderCellDef>Updated By</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.updatedBy">
-                            {{role.updatedBy | titlecase}}
+                        <span *ngFor="let sender of role.senderData">
+                            {{sender.firstName | titlecase}}&nbsp; {{sender.lastName | titlecase}}
                         </span>
                     </mat-cell>
                 </ng-container>
@@ -47,16 +52,16 @@
                 <ng-container matColumnDef="handover">
                     <mat-header-cell *matHeaderCellDef>Handover</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.handover">
-                            {{role.handover | titlecase}}
+                        <span *ngFor="let receiver of role.receiverData">
+                            {{receiver.firstName | titlecase}}&nbsp; {{receiver.lastName | titlecase}}
                         </span>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="date">
                     <mat-header-cell *matHeaderCellDef>Date </mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span *ngIf="role.date">
-                            {{role.date | date:'shortDate'}}
+                        <span *ngFor="let sender of role.senderData">
+                            {{sender.dateAndTime | date:'mediumDate'}}
                         </span>
                     </mat-cell>
                 </ng-container>
@@ -64,7 +69,10 @@
                 <ng-container matColumnDef="time">
                     <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        {{ role.time }}
+                        <span *ngFor="let sender of role.senderData">
+                            {{ sender.dateAndTime | date:'shortTime'}}
+                        </span>
+                        
                     </mat-cell>
                 </ng-container>
 
