changes in update deposit status

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
@@ -72,11 +72,11 @@
 
                 </ng-container>
 
-                <ng-container matColumnDef="update">
+                <ng-container matColumnDef="update" >
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let deposit">
                         <ng-container>
-                            <button style="width: 120px;" class="apply-kyc" (click)="updateStatus(deposit)">Update
+                            <button  *ngIf ="deposit.depositStatus == 'Pending'" style="width: 120px;" class="apply-kyc" (click)="updateStatus(deposit)">Update
                             </button>
                         </ng-container>
 
