--- a/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
@@ -7,6 +7,24 @@
             <form [formGroup]="paymentForm">
                 <div class="kt-portlet__body">
                     <div>
+                        <div *ngIf="controls.depositStatus.value">
+                            <div class="row kt-margin-b-15">
+                                <div class="col-4 form-label mandatory">
+                                    <mat-label>Transaction ID</mat-label>
+                                </div>
+                                <div class="col-8">
+                                    <input class="form-control" formControlName="depositTransactionId"
+                                        style="text-transform: uppercase;" placeholder="TRAN04041995"
+                                        [class.isError]="controls.depositTransactionId.touched && controls.depositTransactionId.invalid" />
+
+                                    <mat-error
+                                        *ngIf="controls.depositTransactionId.touched && controls.depositTransactionId.invalid">
+                                        Required field
+                                    </mat-error>
+                                </div>
+                            </div>
+
+                        </div>
 
                         <div class="row kt-margin-b-15">
                             <div class="col-4 form-label mandatory">
@@ -135,7 +153,8 @@
                             </div>
                         </div>
 
-                        <div *ngIf ="controls.depositStatus.value">
+                        <div *ngIf="controls.depositStatus.value">
+
                             <div class="row kt-margin-b-15">
                                 <div class="col-4 form-label mandatory">
                                     <mat-label>Deposit Status</mat-label>
@@ -149,7 +168,7 @@
                                         <option value="Completed">COMPLETED</option>
                                         <option value="Rejected">REJECTED</option>
                                     </select>
-    
+
                                     <mat-error
                                         *ngIf="controls.depositStatus.touched && controls.depositStatus.errors?.required">
                                         Required field
@@ -158,7 +177,7 @@
                             </div>
                         </div>
 
-                        
+
 
 
                         <kt-modal-footer (action)="action($event)" [value]="data.action">
