changes in deposit ui

--- a/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
@@ -180,7 +180,7 @@
 
 
 
-                        <kt-modal-footer (action)="action($event)" [value]="data.action">
+                        <kt-modal-footer (action)="action($event)" [value]="'Update'">
                         </kt-modal-footer>
 
                     </div>
