bm::loan scrap changes & payment method chnages

--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -478,7 +478,7 @@
         <div class="col-12 card kt-padding-15">
             <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Disbursement</label>
 
-            <div class="row" *ngIf="loanId">
+            <div class="row" *ngIf="masterLoanId">
                 <kt-disburse [disable]="true" [loanDetials]="details" [masterAndLoanIds]="masterAndLoanIds">
                 </kt-disburse>
             </div>
