bm::pkt trac & cust details bug

--- a/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/customer-details/customer-details.component.html
@@ -132,7 +132,7 @@
                                 {{masterLoan.customerLoan[0].loanUniqueId}}
                             </div>
                             <div>
-                                {{masterLoan.customerLoan[1].loanUniqueId}}
+                                {{masterLoan?.customerLoan[1]?.loanUniqueId}}
                             </div>
 
 
@@ -148,7 +148,7 @@
                                     </div>
                                     <div>
                                         <span
-                                            class="currency">{{masterLoan.customerLoan[1].loanAmount | indianCurrencyFormat}}</span>
+                                            class="currency">{{masterLoan?.customerLoan[1]?.loanAmount | indianCurrencyFormat}}</span>
                                     </div>
                                 </div>
                             </div>
